k8s-demo-backend/overlays/dev/patches/rollouts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-demo-backend
  template:
    metadata:
      labels:
        app: k8s-demo-backend
    spec:
      containers:
        - name: k8s-demo-backend
          image: k8s-demo-backend:latest
          ports:
            - containerPort: 3000
